--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ p {
     color: var(--color-text-primary);
 }
 
+/* Background texture*/
 body {
     background-color: var(--color-bg-light);
     background-image: repeating-linear-gradient(
