--- a/src/pages/shared.module.css
+++ b/src/pages/shared.module.css
@@ -1,3 +1,26 @@
 .pageContent {
   padding: var(--layout-padding);
 }
+
+.list {
+  display: flex;
+  flex-direction: column;
+  color: var(--color-text-primary);
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+.list > li {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  margin-bottom: 0.5rem;
+}
+
+.list > li::before {
+  content: '■';
+  color: var(--color-text-primary);
+  flex-shrink: 0;
+  font-size: 0.9em;
+}
