--- a/src/pages/CurriculumPage/CurriculumPage.module.css
+++ b/src/pages/CurriculumPage/CurriculumPage.module.css
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 1rem;
+}
+
+/* Avoid extra padding on the first item only */
+.container:not(:first-child) {
   padding: 1rem 0;
 }
 
