--- a/src/components/HeaderBar/NavBar/TabNav/TabNav.module.css
+++ b/src/components/HeaderBar/NavBar/TabNav/TabNav.module.css
@@ -5,15 +5,20 @@
   margin-top: 10px;
 }
 
-.tabButton {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  margin: 0;
-  padding: 5px 10px;
+.tabLabel {
   font-family: 'Waukegan LDO', sans-serif;
   font-size: 16px;
   color: var(--color-text-primary);
+  margin-top: 2px; /* Adjusted to align with the icon */
+}
+
+.tabButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin: 0;
+  padding: 5px 10px;
   background: transparent;
   border: none;
   border-bottom: 2px solid transparent;
