--- a/src/components/H2Custom/H2Custom.module.css
+++ b/src/components/H2Custom/H2Custom.module.css
@@ -1,11 +1,19 @@
 .container {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .icon {
-    color: var(--color-text-primary);
-    filter: drop-shadow(3px 4px 0 var(--color-text-shadow));
-    font-size: 1.5em;
+  color: var(--color-text-primary);
+  filter: drop-shadow(3px 4px 0 var(--color-text-shadow));
+  font-size: 1.5em;
+  margin-bottom: 3px;
+}
+
+.text {
+  font-family: 'Waukegan LDO', sans-serif;
+  color: var(--color-text-primary);
+  font-size: 1.3rem;
+  line-height: 1.5;
 }
