fix(ProjectCard): update iconSize prop for H2Custom component and adjust text shadow color

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ body {
   --color-bg-light: #c3bfa6;
   --color-grid-light: #bdbaa1;
   --color-text-primary-light: #3e3c34;
-  --color-text-shadow-light: #8e8b7f;
+  --color-text-shadow-light: #8e8b7f62;
   --color-screen-decoration-primary-light: #413f37;
   --color-screen-decoration-secondary-light: #9d9986;
   --color-shadow-light: #6c695d;
