--- a/src/pages/shared.module.css
+++ b/src/pages/shared.module.css
@@ -24,3 +24,13 @@
   flex-shrink: 0;
   font-size: 0.9em;
 }
+
+@media (min-width: 900px) {
+  .pageContent {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
