--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .buttonBody {
-    display: flex;
+    display: inline-flex;
     gap: 5px;
     font-family: 'Waukegan LDO', sans-serif;
     font-size: 16px;
@@ -12,10 +12,7 @@
     cursor: pointer;
     text-align: center;
     /*transition: 200ms ease-in-out;*/
-}
-
-.buttonBody:hover {
-    font-weight: bold;
+    width: auto;
 }
 
 .buttonBody:active {
